# PicoBolo

firmware/: .gitignore  CMakeLists.txt
firmware/src/: CMakeLists.txt  config.h  core1.c  main.c  main.h
firmware/src/network/: CMakeLists.txt  network.c  network.h
